--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -26,19 +26,7 @@
     // set default line height to match p
     line-height: map-get($line-heights, default-text);
 
-    @if ($increase-font-size-on-larger-screens) {
-      @media screen and (max-width: $breakpoint-x-large) {
-        font-size: map-get($base-font-sizes, base);
-      }
-
-      @media screen and (min-width: $breakpoint-x-large) {
-        font-size: map-get($base-font-sizes, large);
-        //the rem value is not affected by the change in font-size; it needs to be multiplied by the ratio new font-size/default font-size
-        line-height: map-get($line-heights, default-text) * $font-size-ratio--largescreen;
-      }
-    } @else {
-      font-size: map-get($base-font-sizes, base);
-    }
+    @extend %increase-font-size-on-larger-screens;
   }
 
   // headings
